fix grade blanking, turn expenditures into a range, fix nearby locations overflow

--- a/app/scss/css/locations.css.scss
+++ b/app/scss/css/locations.css.scss
@@ -83,6 +83,10 @@
 				.nearby-location {
 					padding-bottom: 5px;
 				}
+				.nearby-display {
+					height: 150px;
+					overflow: scroll;
+				}
 			}
 
 		}
